# Hanoying-Robot

./: .gitignore  LICENSE  OBJ_LIST.md  README.md  all.launch  coppeliasim_scene.ttt  frames.gv
doc/: HEALTHY.md  OBJLIST.md  README.md  SETUP.md  frames.gv  hanoying.gv
hanoying_back/: CMakeLists.txt  package.xml
hanoying_back/action/: GameMove.action
hanoying_back/launch/: back.launch
hanoying_back/msg/: Disk.msg  GameRaw.msg  GameState.msg  Tower.msg
hanoying_back/src/decision_system/: __init__.py  decision_system.py
hanoying_back/src/game_move/: __init__.py  do_move.py  game_move.py
hanoying_back/src/game_move_server/: __init__.py  do_move.py  game_move_server.py
hanoying_back/src/game_solve/: __init__.py  game_solve.py  rules.py  solver.py
hanoying_back/src/game_state/: __init__.py  game_state.py  process.py
hanoying_back/src/sim_to_raw/: __init__.py  sim_to_raw.py
hanoying_back/srv/: GameSolve.srv  GameSolveList.srv  GameSolveValidate.srv
hanoying_front/: CMakeLists.txt  package.xml
hanoying_front/launch/: front.launch
hanoying_front/src/ctrl/: __init__.py  ctrl.py
hanoying_front/src/gui/: __init__.py  gui.py
sim/: coppeliasim_scene.ttt  nonthreaded_childscript_hanoy.lua
